--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <h1>TicTacToe</h1>
         </section>
         <section class="grid">
-            <div onclick="ticTacToe(0)"></div>
-            <div onclick="ticTacToe(1)"></div>
-            <div onclick="ticTacToe(2)"></div>
-            <div onclick="ticTacToe(3)"></div>
-            <div onclick="ticTacToe(4)"></div>
-            <div onclick="ticTacToe(5)"></div>
-            <div onclick="ticTacToe(6)"></div>
-            <div onclick="ticTacToe(7)"></div>
-            <div onclick="ticTacToe(8)"></div>
+            <div onclick="play(0)"></div>
+            <div onclick="play(1)"></div>
+            <div onclick="play(2)"></div>
+            <div onclick="play(3)"></div>
+            <div onclick="play(4)"></div>
+            <div onclick="play(5)"></div>
+            <div onclick="play(6)"></div>
+            <div onclick="play(7)"></div>
+            <div onclick="play(8)"></div>
         </section>
         <section>
             <h2>Log</h2>
