--- a/P4.html
+++ b/P4.html
@@ -15,42 +15,42 @@
             <h1>Here comes the P4 !</h1>
         </section>
         <section class="grid">
-            <div onclick="fallX(0)"></div>
-            <div onclick="fallX(1)"></div>
-            <div onclick="fallX(2)"></div>
-            <div onclick="fallX(3)"></div>
-            <div onclick="fallX(4)"></div>
-            <div onclick="fallX(5)"></div>
-            <div onclick="fallX(0)"></div>
-            <div onclick="fallX(1)"></div>
-            <div onclick="fallX(2)"></div>
-            <div onclick="fallX(3)"></div>
-            <div onclick="fallX(4)"></div>
-            <div onclick="fallX(5)"></div>
-            <div onclick="fallX(0)"></div>
-            <div onclick="fallX(1)"></div>
-            <div onclick="fallX(2)"></div>
-            <div onclick="fallX(3)"></div>
-            <div onclick="fallX(4)"></div>
-            <div onclick="fallX(5)"></div>
-            <div onclick="fallX(0)"></div>
-            <div onclick="fallX(1)"></div>
-            <div onclick="fallX(2)"></div>
-            <div onclick="fallX(3)"></div>
-            <div onclick="fallX(4)"></div>
-            <div onclick="fallX(5)"></div>
-            <div onclick="fallX(0)"></div>
-            <div onclick="fallX(1)"></div>
-            <div onclick="fallX(2)"></div>
-            <div onclick="fallX(3)"></div>
-            <div onclick="fallX(4)"></div>
-            <div onclick="fallX(5)"></div>
-            <div onclick="fallX(0)"></div>
-            <div onclick="fallX(1)"></div>
-            <div onclick="fallX(2)"></div>
-            <div onclick="fallX(3)"></div>
-            <div onclick="fallX(4)"></div>
-            <div onclick="fallX(5)"></div>
+            <div onclick="fall(0)"></div>
+            <div onclick="fall(1)"></div>
+            <div onclick="fall(2)"></div>
+            <div onclick="fall(3)"></div>
+            <div onclick="fall(4)"></div>
+            <div onclick="fall(5)"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </section>
         <section>
             <h2>Log</h2>
