fix some diags rules and add color and animation to token

--- a/P4.html
+++ b/P4.html
@@ -15,12 +15,12 @@
             <h1>Here comes the P4 !</h1>
         </section>
         <section class="grid">
-            <div onclick="fall(0)"></div>
-            <div onclick="fall(1)"></div>
-            <div onclick="fall(2)"></div>
-            <div onclick="fall(3)"></div>
-            <div onclick="fall(4)"></div>
-            <div onclick="fall(5)"></div>
+            <div id="hoverable" onclick="fall(0)"></div>
+            <div id="hoverable" onclick="fall(1)"></div>
+            <div id="hoverable" onclick="fall(2)"></div>
+            <div id="hoverable" onclick="fall(3)"></div>
+            <div id="hoverable" onclick="fall(4)"></div>
+            <div id="hoverable" onclick="fall(5)"></div>
             <div></div>
             <div></div>
             <div></div>
