fix animations pulse and give some skin to logger

--- a/P4.html
+++ b/P4.html
@@ -52,8 +52,8 @@
             <div></div>
             <div></div>
         </section>
-        <section>
-            <h2>Log</h2>
+        <section class="logger">
+            <h2>Here comes the log !</h2>
             <div class="log"></div>
             <button onclick="reload()">Play again !</button>
         </section>
