add img alien and stars

--- a/P4.html
+++ b/P4.html
@@ -57,6 +57,9 @@
             <div class="log"></div>
             <button onclick="reload()">Play again !</button>
         </section>
+        <section class="alien">
+            <img src="img/alien.gif" alt="">
+        </section>
     </main>
 
     <script src="P4.js"></script>
