--- a/P4.html
+++ b/P4.html
@@ -13,6 +13,7 @@
     <main>
         <section>
             <h1>Here comes the P4 !</h1>
+            <audio src="music/Stronghold Under Siege.mp3" autoplay loop></audio>
         </section>
         <section class="grid">
             <div id="hoverable" onclick="fall(0)"></div>
