--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2>Log</h2>
             <div class="log"></div>
             <button onclick="reload()">Play again !</button>
-            <a href="P4.html"><button>P4</button></a>
+            <a href="P4.html"><button>Click here for more fun</button></a>
         </section>
     </main>
 
