reup of all previous commit lost (animated background, music and some fix js)

--- a/P4.html
+++ b/P4.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <video src="video/infinity.mp4" autoplay loop muted></video>
     <main>
         <section>
             <h1>Here comes the P4 !</h1>
@@ -54,7 +55,6 @@
             <div></div>
         </section>
         <section class="logger">
-            <h2>Here comes the log !</h2>
             <div class="log"></div>
             <button onclick="reload()">Play again !</button>
         </section>
